@@ -1118,6 +1118,7 @@ Options include:
  * lock - trace when lockdir locks are taken or released
  * merge - emit information for debugging merges
  * pack - emit information about pack operations
+ * selftest_debug - do not disable all debug flags when running selftest
 
 """
 '''
