@@ -58,6 +58,11 @@ IN DEVELOPMENT
 
   TESTING:
 
+    * New -Dselftest_debug flag disables clearing of the debug flags during
+      tests.  This is useful if you want to use e.g. -Dhpss to help debug a
+      failing test.  Be aware that using this feature is likely to cause
+      spurious test failures if used with the full suite. (Andrew Bennetts)
+
   INTERNALS:
 
 
